--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
     "aws-sam-webpack-plugin": "^0.5.1",
+    "copy-webpack-plugin": "^5.1.1",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
